<resources>
    <string name="app_name">Pr3_Zubarev</string>
    <string name="linear_activity">Linear activity</string>
    <string name="frame">Frame</string>
    <string name="relative">Relative</string>
    <string name="linear">Linear</string>
    <string name="constrain">Constrain</string>
    <string name="back">back</string>
    <string name="input_field">input field</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="framelayout">FrameLayout</string>
    <string name="relativelayout">RelativeLayout</string>
</resources>